// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Bar 100% Complete + Title 1`] = `
<bolt-progress-bar value="100"
                   title="Percent Complete"
>
  <div role="progressbar"
       class="c-bolt-progress-bar is-filled    c-bolt-progress-bar--outside"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="100"
       aria-label="Percent Complete"
  >
    <div class="c-bolt-progress-bar__title">
      Percent Complete
    </div>
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill c-bolt-progress-bar__fill--at-max"
            style="transform: translate3d(100%, 0, 0) translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      100%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`Progress Bar 100% Complete + Title 2`] = `
<div
  style=""
>
  <!---->
  
      
  <div
    aria-label="Percent Complete"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="c-bolt-progress-bar c-bolt-progress-bar--outside"
    role="progressbar"
    style=""
  >
    
        
              
    <div
      class="c-bolt-progress-bar__title"
      style=""
    >
      <!---->
      Percent Complete
      <!---->
    </div>
    
            
        
    <div
      class="c-bolt-progress-bar__track"
      style=""
    >
      
          
      <span
        class="c-bolt-progress-bar__fill c-bolt-progress-bar__fill--at-max"
        style="transform:translate3d(100%, 0, 0) translate3d(-100%, 0, 0);"
      >
        
          
      </span>
      
        
    </div>
    

        
              
    <div
      class="c-bolt-progress-bar__value"
      style=""
    >
      
                100%
              
    </div>
    
            
      
  </div>
  
    
  <!---->
</div>
`;

exports[`Progress Bar Basic Progress Bar usage 1`] = `
<bolt-progress-bar value="50">
  <div role="progressbar"
       class="c-bolt-progress-bar     c-bolt-progress-bar--outside"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="50"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(50%, 0, 0) translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      50%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`Progress Bar Basic Progress Bar usage 2`] = `
<div
  style=""
>
  <!---->
  
      
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="c-bolt-progress-bar c-bolt-progress-bar--outside"
    role="progressbar"
    style=""
  >
    
        
        
    <div
      class="c-bolt-progress-bar__track"
      style=""
    >
      
          
      <span
        class="c-bolt-progress-bar__fill"
        style="transform:translate3d(50%, 0, 0) translate3d(-100%, 0, 0);"
      >
        
          
      </span>
      
        
    </div>
    

        
              
    <div
      class="c-bolt-progress-bar__value"
      style=""
    >
      
                50%
              
    </div>
    
            
      
  </div>
  
    
  <!---->
</div>
`;

exports[`Progress Bar Custom Label Text 1`] = `
<bolt-progress-bar value="2"
                   min="1"
                   max="6"
                   title="Current Progress"
>
  <div role="progressbar"
       class="c-bolt-progress-bar     c-bolt-progress-bar--outside"
       aria-valuemin="1"
       aria-valuemax="6"
       aria-valuenow="2"
       aria-label="Current Progress"
  >
    <div class="c-bolt-progress-bar__title">
      Current Progress
    </div>
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(33.333333333333%, 0, 0) translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      33%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`Progress Bar Custom Label Text 2`] = `
<div
  style=""
>
  <!---->
  
      
  <div
    aria-label="Current Progress"
    aria-valuemax="6"
    aria-valuemin="1"
    aria-valuenow="2"
    class="c-bolt-progress-bar c-bolt-progress-bar--outside"
    role="progressbar"
    style=""
  >
    
        
              
    <div
      class="c-bolt-progress-bar__title"
      style=""
    >
      <!---->
      Current Progress
      <!---->
    </div>
    
            
        
    <div
      class="c-bolt-progress-bar__track"
      style=""
    >
      
          
      <span
        class="c-bolt-progress-bar__fill"
        style="transform:translate3d(33.33333333333333%, 0, 0) translate3d(-100%, 0, 0);"
      >
        
          
      </span>
      
        
    </div>
    

        
              
    <div
      class="c-bolt-progress-bar__value"
      style=""
    >
      
                33%
              
    </div>
    
            
      
  </div>
  
    
  <!---->
</div>
`;

exports[`Progress Bar Progress Bar w/o Shadow DOM 1`] = `
<bolt-progress-bar no-shadow
                   value="50"
>
  <div role="progressbar"
       class="c-bolt-progress-bar     c-bolt-progress-bar--outside"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="50"
  >
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(50%, 0, 0) translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      50%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`Progress Bar Progress Bar w/o Shadow DOM 2`] = `
<div
  style=""
>
  <bolt-progress-bar
    no-shadow=""
    style=""
    value="50"
  >
    <!---->
    
      
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="c-bolt-progress-bar c-bolt-progress-bar--outside"
      role="progressbar"
      style=""
    >
      
        
        
      <div
        class="c-bolt-progress-bar__track"
        style=""
      >
        
          
        <span
          class="c-bolt-progress-bar__fill"
          style="transform:translate3d(50%, 0, 0) translate3d(-100%, 0, 0);"
        >
          
          
        </span>
        
        
      </div>
      

        
              
      <div
        class="c-bolt-progress-bar__value"
        style=""
      >
        
                50%
              
      </div>
      
            
      
    </div>
    
    
    <!---->
  </bolt-progress-bar>
</div>
`;

exports[`Progress Bar valuePosition: none 1`] = `
<bolt-progress-bar value="75"
                   title="Percent Downloaded"
                   value-position="none"
>
  <div role="progressbar"
       class="c-bolt-progress-bar     c-bolt-progress-bar--none"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="75"
       aria-label="Percent Downloaded"
  >
    <div class="c-bolt-progress-bar__title">
      Percent Downloaded
    </div>
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(75%, 0, 0) translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`Progress Bar valuePosition: none 2`] = `
<div
  style=""
>
  <!---->
  
      
  <div
    aria-label="Percent Downloaded"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="c-bolt-progress-bar c-bolt-progress-bar--none"
    role="progressbar"
    style=""
  >
    
        
              
    <div
      class="c-bolt-progress-bar__title"
      style=""
    >
      <!---->
      Percent Downloaded
      <!---->
    </div>
    
            
        
    <div
      class="c-bolt-progress-bar__track"
      style=""
    >
      
          
      <span
        class="c-bolt-progress-bar__fill"
        style="transform:translate3d(75%, 0, 0) translate3d(-100%, 0, 0);"
      >
        
          
      </span>
      
        
    </div>
    

        
      
  </div>
  
    
  <!---->
</div>
`;

exports[`Progress Bar valuePosition: outside 1`] = `
<bolt-progress-bar value="75"
                   title="Percent Downloaded"
                   value-position="outside"
>
  <div role="progressbar"
       class="c-bolt-progress-bar     c-bolt-progress-bar--outside"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="75"
       aria-label="Percent Downloaded"
  >
    <div class="c-bolt-progress-bar__title">
      Percent Downloaded
    </div>
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(75%, 0, 0) translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      75%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`Progress Bar valuePosition: outside 2`] = `
<div
  style=""
>
  <!---->
  
      
  <div
    aria-label="Percent Downloaded"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="c-bolt-progress-bar c-bolt-progress-bar--outside"
    role="progressbar"
    style=""
  >
    
        
              
    <div
      class="c-bolt-progress-bar__title"
      style=""
    >
      <!---->
      Percent Downloaded
      <!---->
    </div>
    
            
        
    <div
      class="c-bolt-progress-bar__track"
      style=""
    >
      
          
      <span
        class="c-bolt-progress-bar__fill"
        style="transform:translate3d(75%, 0, 0) translate3d(-100%, 0, 0);"
      >
        
          
      </span>
      
        
    </div>
    

        
              
    <div
      class="c-bolt-progress-bar__value"
      style=""
    >
      
                75%
              
    </div>
    
            
      
  </div>
  
    
  <!---->
</div>
`;

exports[`Progress Bar valuePosition: top 1`] = `
<bolt-progress-bar value="75"
                   title="Percent Downloaded"
                   value-position="top"
>
  <div role="progressbar"
       class="c-bolt-progress-bar     c-bolt-progress-bar--top"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-valuenow="75"
       aria-label="Percent Downloaded"
  >
    <div class="c-bolt-progress-bar__title">
      Percent Downloaded
    </div>
    <div class="c-bolt-progress-bar__track">
      <span class="c-bolt-progress-bar__fill "
            style="transform: translate3d(75%, 0, 0) translate3d(-100%, 0, 0);"
      >
      </span>
    </div>
    <div class="c-bolt-progress-bar__value">
      75%
    </div>
  </div>
</bolt-progress-bar>
`;

exports[`Progress Bar valuePosition: top 2`] = `
<div
  style=""
>
  <!---->
  
      
  <div
    aria-label="Percent Downloaded"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="c-bolt-progress-bar c-bolt-progress-bar--top"
    role="progressbar"
    style=""
  >
    
        
              
    <div
      class="c-bolt-progress-bar__title"
      style=""
    >
      <!---->
      Percent Downloaded
      <!---->
    </div>
    
            
        
    <div
      class="c-bolt-progress-bar__track"
      style=""
    >
      
          
      <span
        class="c-bolt-progress-bar__fill"
        style="transform:translate3d(75%, 0, 0) translate3d(-100%, 0, 0);"
      >
        
          
      </span>
      
        
    </div>
    

        
              
    <div
      class="c-bolt-progress-bar__value"
      style=""
    >
      
                75%
              
    </div>
    
            
      
  </div>
  
    
  <!---->
</div>
`;
